# GDP_software

./: .gitignore  CS Encoder.py  README.md  avoidance.py  avoidance1.py  avoidance2.py  back_command_testing.py  camera.py  camera_settings.json  data_collection.py  deadend.py  direct_drive.py  encoder.py  fck.py  final_svr_model.RData  geometric_map.py  huh.py  main.py  mav_listener.py  mav_sender.py  navigation.py  navigation2.py  navigation_final.py  plot_route.py  protocol.py  pybackend2.cpython-39-aarch64-linux-gnu.so.2.54.2  pyproject.toml  route_main.py  rpi5_pwm.py  semantic_map.py  steering.py  steering_basic.py  untested_pcd_mapping.py
CAD Models/: Attribution for the Downloaded Files.txt
ESP32/: sdkconfig
Encoder/: encoder.py
GPS/: gnssapp.py  messntripcomms.py
central_hub/: central_hub.py  main.py  ppm_reader.py  pwm.py  receiver.py  soft_uart.py
data/: imu_122.952814687.txt  imu_126.247282247.txt
low_level_control/: README.md
lua_scripts/: README.md
motor_controller/: encoder.py  main.py  motor.py  motor_controller.py  sabertooth.py
navigation/: back_command_testing.py  camera_angle.py  data_collection.py  deadend.py  geometric_map.py  logging_config.py  mav_listener.py  mav_sender.py  navigation_final.py  semantic_map.py  steering.py  steering_basic.py
pyrealsense/: librealsense2-gl.so.2.54.2  pybackend2.cpython-39-aarch64-linux-gnu.so.2  pyproject.toml  pyrealsense2.cpython-39-aarch64-linux-gnu.so.2.54  pyrealsense2.cpython-39-aarch64-linux-gnu.so.2.54.2  pyrsutils.cpython-39-aarch64-linux-gnu.so.2.54  (+1 more)
upy_mavlink/: mav_bridge.py
(+79 files in other folders)
